@@ -34,7 +34,7 @@ FFI::Platypus::Type::PtrObject = 0.02
 
 [DynamicPrereqs / Alien]
 -condition = do { use FFI::CheckLib 0.27; !find_lib lib => 'newrelic' }
--body = requires('Alien::libnewrelic', '0.04')
+-body = requires('Alien::libnewrelic', '0.05')
 
 [PruneFiles]
 filename = newrelic_sdk.log
